<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:showAsAction="collapseActionView|always"
        android:title="@string/search_title"/>
    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/sort"/>
    <item
        android:id="@+id/action_pick_calendar"
        android:icon="@drawable/ic_action_go_to_today"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/datum_auswaehlen_button_label"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/fished_starving"
        android:orderInCategory="999"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>