<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="46dp"
    android:paddingLeft="46dp"
    android:paddingRight="46dp"
    android:paddingStart="46dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidprojekt.SignUpActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/app_name"
        android:textColor="#54a3d5"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="#5ebbf6"
        android:textSize="13sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/signUpFieldsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="227dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordField"
            android:ems="10"
            android:hint="@string/email_hint_initial"
            android:inputType="textEmailAddress" >
        </EditText>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditText"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up_button_label" />

        <TextView
            android:id="@+id/alreadyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:text="@string/already" >

            <requestFocus />
        </TextView>
    </RelativeLayout>

</RelativeLayout>