<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="46dp"
    android:paddingRight="46dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidprojekt.UnlockActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/app_name"
        android:textColor="#54a3d5"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_unlock"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="140dp" >

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <ProgressBar
            android:id="@+id/progressUnlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/passwordField"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/forgotPWText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp"
        android:paddingTop="12dp"
        android:text="@string/forgot_pw" />

    <ImageButton
        android:id="@+id/loginButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditTextLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_unlock"
        android:text="@string/unlock_button_label" />

</RelativeLayout>